update bug z-index, flex wrap button

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -1586,9 +1586,9 @@ ul.menu-footer {
     background-color: #232157;
     position: sticky;
     top: 0;
-    z-index: 100000;
+    z-index: 1000;
     @include MediaQuery($sml) {
-        z-index: 1000000;
+        z-index: 1000;
     }
 
     .container {
